# NdkTest

./: README.md  local.properties
app/: CMakeCache.txt  CMakeLists.txt  build.gradle  proguard-rules.pro
app/inc/: AgentManager.h  logger.h  tlog.h
app/src/androidTest/java/com/example/liuwei/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: milive_agent_jni.cpp  milive_agent_jni.h  native-lib.cpp
app/src/main/java/com/example/liuwei/ndktest/: MainActivity.java
app/src/main/java/com/xiaomi/agent/: MiLiveAgent.java  SystemInfo.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/liuwei/ndktest/: ExampleUnitTest.java
captures/: com.example.liuwei.ndktest_2017.11.10_16.40.li
gradle/wrapper/: gradle-wrapper.properties
